--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Resume | Assignement Level 2</title>
+    <title>Web Resume | Learn basics of HTML and CSS</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
