--- a/index.html
+++ b/index.html
@@ -86,10 +86,16 @@
       <p>Illustrator</p>
     </section>
     <footer class="footer">
-      <a href="#">Facebook</a>
-      <a href="#">Twitter</a>
-      <a href="#">Instagram</a>
-      <a href="#">LinkedIn</a>
+      <a target="_blank" href="https://www.facebook.com/AltCampusIO"
+        >Facebook</a
+      >
+      <a target="_blank" href="https://twitter.com/AltCampus">Twitter</a>
+      <a target="_blank" href="https://www.instagram.com/altcampus/"
+        >Instagram</a
+      >
+      <a target="_blank" href="https://www.linkedin.com/company/altcampus/"
+        >LinkedIn</a
+      >
     </footer>
   </body>
 </html>
