add og and twitter card description

--- a/index.html
+++ b/index.html
@@ -3,6 +3,35 @@
   <head>
     <meta charset="UTF-8" />
     <title>Web Resume | Learn basics of HTML and CSS</title>
+    <!-- Facebook Card -->
+    <meta
+      property="og:title"
+      content="Web Resume | Learn basics of HTML and CSS"
+    />
+    <meta
+      property="og:description"
+      content="A template to practice basic concepts of HTML & CSS"
+    />
+    <meta
+      property="og:image"
+      content="https://raw.githubusercontent.com/suraj122/AC-STYLE-images/master/html-css-projects/web-resume.png"
+    />
+    <meta property="og:url" content="https://altcampus.github.io/web-resume/" />
+
+    <!-- Twitter Card -->
+    <meta
+      name="twitter:title"
+      content="Web Resume | Learn basics of HTML and CSS"
+    />
+    <meta
+      name="twitter:description"
+      content="A template to practice basic concepts of HTML & CSS"
+    />
+    <meta
+      name="twitter:image"
+      content="https://raw.githubusercontent.com/suraj122/AC-STYLE-images/master/html-css-projects/web-resume.png"
+    />
+    <meta name="twitter:card" content="summary_large_image" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
